# botapi-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
examples/: auth.rs  files.rs  long_polling.rs  webhook.rs
generate/: Cargo.toml
generate/src/: lib.rs  methods.rs  naming.rs  schema.rs  types.rs  util.rs
src/: bot.rs  example.rs  ext.rs  gen_methods.rs  gen_types.rs  lib.rs  main.rs
