[package]
name = "botapi"
version = "0.1.0"
edition = "2021"
include = [ "./src",  "./examples" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
enum_dispatch = "0.3.8"
reqwest = { version = "0.11.10", features = ["tokio-rustls", "json", "multipart", "stream"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.19.0", features = ["net", "socket2", "io-util", "tokio-macros", "macros", "rt-multi-thread"] }
rustfmt = "0.10.0"
serde_path_to_error = "0.1.8"
serde_urlencoded = "0.7.1"

[build-dependencies]
generate = { path = "./generate" }
anyhow = "1.0.58"
rustfmt = "0.10.0"
